creditas-sf/force-app/main/default/objects/OperationSection__c/OperationSection__c.object-meta.xml
<CustomObject>
    <label>Seção Operação</label>
    <nameField>
        <label>Seção Operação Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seção Operação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>