creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AccountObservation__c.field-meta.xml
<CustomField>
    <fullName>AccountObservation__c</fullName>
    <label>Observação da conta corrente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>