creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AccountReason__c.field-meta.xml
<CustomField>
    <fullName>AccountReason__c</fullName>
    <label>Motivo da conta corrente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>