creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AccountSubReason__c.field-meta.xml
<CustomField>
    <fullName>AccountSubReason__c</fullName>
    <label>Sub-motivo da conta corrente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>