creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AdditionalCostsObservation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCostsObservation__c</fullName>
    <label>Observação das despesas de registro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>