creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AdditionalCostsReason__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCostsReason__c</fullName>
    <label>Motivo das despesas de registro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>