creditas-sf/force-app/main/default/objects/OperationSection__c/fields/AdditionalCostsSubReason__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCostsSubReason__c</fullName>
    <label>Sub-motivo das despesas de registro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>