creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BankObservation__c.field-meta.xml
<CustomField>
    <fullName>BankObservation__c</fullName>
    <label>Observação do banco</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>