creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BankReason__c.field-meta.xml
<CustomField>
    <fullName>BankReason__c</fullName>
    <label>Motivo do banco</label>
    <length>100</length>
    <type>Text</type>
</CustomField>