creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BankSubReason__c.field-meta.xml
<CustomField>
    <fullName>BankSubReason__c</fullName>
    <label>Sub-motivo do banco</label>
    <length>100</length>
    <type>Text</type>
</CustomField>