creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysCNPJobservation__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysCNPJobservation__c</fullName>
    <label>Observação do CNPJ do beneficiário</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>