creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysCNPJreason__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysCNPJreason__c</fullName>
    <label>Motivo do CNPJ do beneficiário</label>
    <length>100</length>
    <type>Text</type>
</CustomField>