creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysCNPJsubReason__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysCNPJsubReason__c</fullName>
    <label>Sub-motivo do CNPJ do beneficiário</label>
    <length>100</length>
    <type>Text</type>
</CustomField>