creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysNameObservation__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysNameObservation__c</fullName>
    <label>Observação do nome do beneficiário</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>