creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysNameReason__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysNameReason__c</fullName>
    <label>Motivo do nome do beneficiário</label>
    <length>100</length>
    <type>Text</type>
</CustomField>