creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BeneficiarysNameSubReason__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarysNameSubReason__c</fullName>
    <label>Sub-motivo do nome do beneficiário</label>
    <length>100</length>
    <type>Text</type>
</CustomField>