creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BranchObservation__c.field-meta.xml
<CustomField>
    <fullName>BranchObservation__c</fullName>
    <label>Observação da agência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>