creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BranchReason__c.field-meta.xml
<CustomField>
    <fullName>BranchReason__c</fullName>
    <label>Motivo da agência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>