creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BranchStatus__c.field-meta.xml
<CustomField>
    <fullName>BranchStatus__c</fullName>
    <label>Status da agência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pendenciado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>