creditas-sf/force-app/main/default/objects/OperationSection__c/fields/BranchSubReason__c.field-meta.xml
<CustomField>
    <fullName>BranchSubReason__c</fullName>
    <label>Sub-motivo da agência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>