creditas-sf/force-app/main/default/objects/OperationSection__c/fields/CarValueObservation__c.field-meta.xml
<CustomField>
    <fullName>CarValueObservation__c</fullName>
    <label>Observação do valor do carro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>