creditas-sf/force-app/main/default/objects/OperationSection__c/fields/CarValueReason__c.field-meta.xml
<CustomField>
    <fullName>CarValueReason__c</fullName>
    <label>Motivo do valor do carro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>