creditas-sf/force-app/main/default/objects/OperationSection__c/fields/CarValueSubReason__c.field-meta.xml
<CustomField>
    <fullName>CarValueSubReason__c</fullName>
    <label>Sub-motivo do valor do carro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>