creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ContractNumberObservation__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberObservation__c</fullName>
    <label>Observação do número do contrato</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>