creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ContractNumberReason__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberReason__c</fullName>
    <label>Motivo do número do contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>