creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ContractNumberSubReason__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberSubReason__c</fullName>
    <label>Sub-motivo do número do contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>