creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ManufacturingYearObservation__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingYearObservation__c</fullName>
    <label>Observação do ano do carro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>