creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyCETobservation__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCETobservation__c</fullName>
    <label>Observação do CET/mês</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>