creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyCETreason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCETreason__c</fullName>
    <label>Motivo do CET/mês</label>
    <length>100</length>
    <type>Text</type>
</CustomField>