creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyCETsubReason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCETsubReason__c</fullName>
    <label>Sub-motivo do CET/mês</label>
    <length>100</length>
    <type>Text</type>
</CustomField>