creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyInterestObservation__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterestObservation__c</fullName>
    <label>Observação taxa de juros da operação/mês</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>