creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyInterestReason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterestReason__c</fullName>
    <label>Motivo da taxa de juros da operação/mês</label>
    <length>100</length>
    <type>Text</type>
</CustomField>