creditas-sf/force-app/main/default/objects/OperationSection__c/fields/MonthlyInterestSubReason__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterestSubReason__c</fullName>
    <label>Sub-motivo taxa de juros da operação/mês</label>
    <length>100</length>
    <type>Text</type>
</CustomField>