creditas-sf/force-app/main/default/objects/OperationSection__c/fields/NetValueObservation__c.field-meta.xml
<CustomField>
    <fullName>NetValueObservation__c</fullName>
    <label>Observação do valor líquido do crédito</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>