creditas-sf/force-app/main/default/objects/OperationSection__c/fields/NetValueReason__c.field-meta.xml
<CustomField>
    <fullName>NetValueReason__c</fullName>
    <label>Motivo do valor líquido do crédito</label>
    <length>100</length>
    <type>Text</type>
</CustomField>