creditas-sf/force-app/main/default/objects/OperationSection__c/fields/NetValueSubReason__c.field-meta.xml
<CustomField>
    <fullName>NetValueSubReason__c</fullName>
    <label>Sub-motivo do valor líquido do crédito</label>
    <length>100</length>
    <type>Text</type>
</CustomField>