creditas-sf/force-app/main/default/objects/OperationSection__c/fields/OperationPurposeObservation__c.field-meta.xml
<CustomField>
    <fullName>OperationPurposeObservation__c</fullName>
    <label>Observação da finalidade da operação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>