creditas-sf/force-app/main/default/objects/OperationSection__c/fields/OperationPurposeReason__c.field-meta.xml
<CustomField>
    <fullName>OperationPurposeReason__c</fullName>
    <label>Motivo da finalidade da operação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>