creditas-sf/force-app/main/default/objects/OperationSection__c/fields/OperationPurposeSubReason__c.field-meta.xml
<CustomField>
    <fullName>OperationPurposeSubReason__c</fullName>
    <label>Sub-motivo da finalidade da operação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>