creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterIOFobservation__c.field-meta.xml
<CustomField>
    <fullName>ParameterIOFobservation__c</fullName>
    <label>Observação do IOF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>