creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterIOFreason__c.field-meta.xml
<CustomField>
    <fullName>ParameterIOFreason__c</fullName>
    <label>Motivo do IOF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>