creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterIOFsubReason__c.field-meta.xml
<CustomField>
    <fullName>ParameterIOFsubReason__c</fullName>
    <label>Sub-motivo do IOF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>