creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterTACobservation__c.field-meta.xml
<CustomField>
    <fullName>ParameterTACobservation__c</fullName>
    <label>Observação do TAC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>