creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterTACreason__c.field-meta.xml
<CustomField>
    <fullName>ParameterTACreason__c</fullName>
    <label>Motivo do TAC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>