creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ParameterTACsubReason__c.field-meta.xml
<CustomField>
    <fullName>ParameterTACsubReason__c</fullName>
    <label>Sub-motivo do TAC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>