creditas-sf/force-app/main/default/objects/OperationSection__c/fields/QuantityObservation__c.field-meta.xml
<CustomField>
    <fullName>QuantityObservation__c</fullName>
    <label>Observação da quantidade de parcelas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>