creditas-sf/force-app/main/default/objects/OperationSection__c/fields/QuantityReason__c.field-meta.xml
<CustomField>
    <fullName>QuantityReason__c</fullName>
    <label>Motivo da quantidade de parcelas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>