creditas-sf/force-app/main/default/objects/OperationSection__c/fields/QuantityRejectReason__c.field-meta.xml
<CustomField>
    <fullName>QuantityRejectReason__c</fullName>
    <label>Motivo Rejeição Quantidade de Parcelas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prazo máximo - Cliente possui idade incompatível com o plano de parcelas</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>