creditas-sf/force-app/main/default/objects/OperationSection__c/fields/QuantitySubReason__c.field-meta.xml
<CustomField>
    <fullName>QuantitySubReason__c</fullName>
    <label>Sub-motivo da quantidade de parcelas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>