creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceDateObservation__c.field-meta.xml
<CustomField>
    <fullName>ServiceDateObservation__c</fullName>
    <label>Observação da data da primeira parcela</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>