creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceDateReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceDateReason__c</fullName>
    <label>Motivo da data da primeira parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>