creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceDateSubReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceDateSubReason__c</fullName>
    <label>Sub-motivo da data da primeira parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>