creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceLastDateObservation__c.field-meta.xml
<CustomField>
    <fullName>ServiceLastDateObservation__c</fullName>
    <label>Observação da data da última parcela</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>