creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceLastDateReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceLastDateReason__c</fullName>
    <label>Motivo da data da última parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>