creditas-sf/force-app/main/default/objects/OperationSection__c/fields/ServiceLastDateSubReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceLastDateSubReason__c</fullName>
    <label>Sub-motivo da data da última parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>