creditas-sf/force-app/main/default/objects/OperationSection__c/fields/UnitPriceObservation__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceObservation__c</fullName>
    <label>Observação da parcela</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>