creditas-sf/force-app/main/default/objects/OperationSection__c/fields/UnitPriceReason__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceReason__c</fullName>
    <label>Motivo da parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>