creditas-sf/force-app/main/default/objects/OperationSection__c/fields/UnitPriceSubReason__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceSubReason__c</fullName>
    <label>Sub-motivo da parcela</label>
    <length>100</length>
    <type>Text</type>
</CustomField>