creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyCETobservation__c.field-meta.xml
<CustomField>
    <fullName>YearlyCETobservation__c</fullName>
    <label>Observação do CET/ano</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>