creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyCETreason__c.field-meta.xml
<CustomField>
    <fullName>YearlyCETreason__c</fullName>
    <label>Motivo do CET/ano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>