creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyCETsubReason__c.field-meta.xml
<CustomField>
    <fullName>YearlyCETsubReason__c</fullName>
    <label>Sub-motivo do CET/ano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>