creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyInterestObservation__c.field-meta.xml
<CustomField>
    <fullName>YearlyInterestObservation__c</fullName>
    <label>Observação taxa de juros da operação/ano</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>