creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyInterestReason__c.field-meta.xml
<CustomField>
    <fullName>YearlyInterestReason__c</fullName>
    <label>Motivo taxa de juros da operação/ano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>