creditas-sf/force-app/main/default/objects/OperationSection__c/fields/YearlyInterestSubReason__c.field-meta.xml
<CustomField>
    <fullName>YearlyInterestSubReason__c</fullName>
    <label>Sub-motivo taxa de juros da operação/ano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>